--- a/EverywhereHouseController/res/layout/management_menu_view.xml
+++ b/EverywhereHouseController/res/layout/management_menu_view.xml
@@ -30,17 +30,18 @@
 
             <RelativeLayout
                 android:id="@+id/RelativeContentTables"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" >
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp" >
 
-                <TableLayout
-                    android:id="@+id/table2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="400dp"
-                    android:layout_alignParentBottom="true"
-                    android:layout_alignParentRight="true"
-                    android:layout_alignParentTop="true"
-                    android:layout_marginRight="40dp" >
+               <TableLayout
+                   android:id="@+id/table2"
+                   android:layout_width="wrap_content"
+                   android:layout_height="400dp"
+                   android:layout_alignParentBottom="true"
+                   android:layout_alignParentRight="true"
+                   android:layout_alignParentTop="true"
+                   android:layout_marginRight="30dp" >
 
                 </TableLayout>
 
@@ -51,7 +52,7 @@
                     android:layout_alignParentBottom="true"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentTop="true"
-                    android:layout_marginLeft="40dp"
+                    android:layout_marginLeft="30dp"
                     android:layout_weight="0.12" >
 
                     <TableRow
@@ -62,16 +63,18 @@
 
                         <Button
                             android:id="@+id/genericButton"
-                            android:layout_width="110dp"
+                            android:layout_width="100dp"
                             android:layout_height="70dp"
                             android:layout_marginBottom="10dp"
                             android:background="@drawable/button_config"
                             android:text="Habitación"
                             android:textColor="@drawable/button_text_color"
-                            android:textSize="25sp" />
+                            android:textSize="30sp" />
 
                     </TableRow>
                 </TableLayout>
+
+                    
 
             </RelativeLayout>
 
