--- a/EverywhereHouseController/res/layout-large/log_in_view.xml
+++ b/EverywhereHouseController/res/layout-large/log_in_view.xml
@@ -15,69 +15,22 @@
 
      <ImageView
          android:id="@+id/HouseIconManagementMenu"
-         android:layout_width="fill_parent"
-         android:layout_height="200dp"
+         android:layout_width="200dp"
+         android:layout_height="180dp"
          android:layout_alignParentTop="true"
          android:layout_centerHorizontal="true"
-         android:layout_marginTop="60dp"
+         android:layout_marginTop="40dp"
          android:src="@drawable/world_ehc" />
-
-     <Button
-         android:id="@+id/buttonLogin"
-         android:layout_width="100dp"
-         android:layout_height="60dp"
-         android:layout_alignParentBottom="true"
-         android:layout_centerHorizontal="true"
-         android:layout_marginBottom="77dp"
-         android:onClick="onClickButton"
-         android:textColor="@drawable/button_text_color"
-         android:background="@drawable/button_config"
-         android:text="Login"
-         android:textSize="30sp" />
-
-     <EditText
-         android:id="@+id/passwordText"
-         android:layout_width="wrap_content"
-         android:layout_height="40dp"
-         android:layout_alignBottom="@+id/password"
-         android:layout_alignLeft="@+id/buttonLogin"
-         android:background="@color/LightGrey"
-         android:ems="10"
-         android:inputType="textPassword"
-         android:lines="1"
-         android:password="true"
-         android:singleLine="true" />
-
-     <EditText
-         android:id="@+id/idText"
-         android:layout_width="wrap_content"
-         android:layout_height="40dp"
-         android:layout_alignLeft="@+id/buttonLogin"
-         android:layout_alignTop="@+id/id"
-         android:background="@color/LightGrey"
-         android:ems="10"
-         android:lines="1"
-         android:singleLine="true" />
 
      <ImageView
          android:id="@+id/imageWordEHC"
-         android:layout_width="fill_parent"
-         android:layout_height="200dp"
+         android:layout_width="200dp"
+         android:layout_height="180dp"
          android:layout_alignBottom="@+id/HouseIconManagementMenu"
          android:layout_alignTop="@+id/HouseIconManagementMenu"
          android:layout_centerHorizontal="true"
          android:layout_marginTop="5dp"
          android:src="@drawable/word_ehc" />
-
-     <TextView
-         android:id="@+id/password"
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
-         android:layout_above="@+id/buttonLogin"
-         android:layout_marginBottom="54dp"
-         android:text="Password "
-         android:textColor="@color/Black"
-         android:textSize="30sp" />
 
      <TextView
          android:id="@+id/id"
@@ -102,5 +55,54 @@
         android:text="Create user"
         android:textColor="@color/Blue"
         android:textColorHint="@color/Blue" />
+
+    <Button
+        android:id="@+id/buttonLogin"
+        android:layout_width="100dp"
+        android:layout_height="60dp"
+        android:layout_above="@+id/createUser"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="47dp"
+        android:background="@drawable/button_config"
+        android:onClick="onClickButton"
+        android:text="Login"
+        android:textColor="@drawable/button_text_color"
+        android:textSize="30sp" />
+
+    <EditText
+        android:id="@+id/idText"
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:layout_alignBaseline="@+id/id"
+        android:layout_alignBottom="@+id/id"
+        android:layout_alignLeft="@+id/passwordText"
+        android:background="@color/LightGrey"
+        android:ems="10"
+        android:lines="1"
+        android:singleLine="true" />
+
+    <EditText
+        android:id="@+id/passwordText"
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:layout_alignLeft="@+id/createUser"
+        android:layout_alignTop="@+id/password"
+        android:background="@color/LightGrey"
+        android:ems="10"
+        android:inputType="textPassword"
+        android:lines="1"
+        android:password="true"
+        android:singleLine="true" />
+
+    <TextView
+        android:id="@+id/password"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/buttonLogin"
+        android:layout_marginBottom="54dp"
+        android:layout_toLeftOf="@+id/buttonLogin"
+        android:text="Password "
+        android:textColor="@color/Black"
+        android:textSize="30sp" />
 
 </RelativeLayout>
