--- a/EverywhereHouseController/res/layout-large/main_menu_view.xml
+++ b/EverywhereHouseController/res/layout-large/main_menu_view.xml
@@ -25,17 +25,20 @@
 
             <ImageView
                 android:id="@+id/world_loading_view"
-                android:layout_width="match_parent"
-                android:layout_height="200dp"
+                android:layout_width="200dp"
+                android:layout_height="180dp"
+                android:layout_centerHorizontal="true"
                 android:layout_marginTop="40dp"
                 android:src="@drawable/world_ehc" />
 
             <ImageView
                 android:id="@+id/word_ehc"
-                android:layout_width="match_parent"
-                android:layout_height="200dp"
+                android:layout_width="200dp"
+                android:layout_height="180dp"
+                android:layout_centerHorizontal="true"
                 android:layout_marginTop="40dp"
                 android:src="@drawable/word_ehc" />
+
         </RelativeLayout>
 
         <RelativeLayout
@@ -43,53 +46,53 @@
             android:layout_height="match_parent" >
 
             <Button
-                android:id="@+id/buttonProfile"
-                android:layout_width="180dp"
-                android:layout_height="100dp"
-                android:layout_alignLeft="@+id/buttonWorks"
-                android:layout_alignParentBottom="true"
-                android:layout_marginBottom="97dp"
-                android:background="@drawable/button_config"
-                android:text="Profile"
-                android:textColor="@drawable/button_text_color"
-                android:textSize="25sp" />
-
-            <Button
-                android:id="@+id/buttonConfig"
-                android:layout_width="180dp"
-                android:layout_height="100dp"
-                android:layout_alignBaseline="@+id/buttonProfile"
-                android:layout_alignBottom="@+id/buttonProfile"
-                android:layout_alignParentLeft="true"
-                android:layout_marginLeft="30dp"
-                android:background="@drawable/button_config"
-                android:text="Configuration"
-                android:textColor="@drawable/button_text_color"
-                android:textSize="25sp" />
-
-            <Button
-                android:id="@+id/buttonManagement"
-                android:layout_width="180dp"
-                android:layout_height="100dp"
-                android:layout_above="@+id/buttonConfig"
-                android:layout_alignLeft="@+id/buttonConfig"
-                android:layout_marginBottom="37dp"
-                android:background="@drawable/button_config"
-                android:text="Management"
-                android:textColor="@drawable/button_text_color"
-                android:textSize="25sp" />
-
-            <Button
                 android:id="@+id/buttonWorks"
-                android:layout_width="180dp"
-                android:layout_height="100dp"
+                android:layout_width="200dp"
+                android:layout_height="80dp"
+                android:layout_alignBaseline="@+id/buttonManagement"
+                android:layout_alignBottom="@+id/buttonManagement"
                 android:layout_alignParentRight="true"
-                android:layout_alignTop="@+id/buttonManagement"
-                android:layout_marginRight="25dp"
                 android:background="@drawable/button_config"
                 android:text="Tasks"
                 android:textColor="@drawable/button_text_color"
-                android:textSize="25sp" />
+                android:textSize="30sp" />
+
+            <Button
+                android:id="@+id/buttonConfig"
+                android:layout_width="wrap_content"
+                android:layout_height="80dp"
+                android:layout_alignLeft="@+id/buttonManagement"
+                android:layout_below="@+id/buttonManagement"
+                android:layout_marginTop="35dp"
+                android:background="@drawable/button_config"
+                android:text="Configuration"
+                android:textColor="@drawable/button_text_color"
+                android:textSize="30sp" />
+
+            <Button
+                android:id="@+id/buttonProfile"
+                android:layout_width="wrap_content"
+                android:layout_height="80dp"
+                android:layout_alignBaseline="@+id/buttonConfig"
+                android:layout_alignBottom="@+id/buttonConfig"
+                android:layout_alignLeft="@+id/buttonWorks"
+                android:layout_alignParentRight="true"
+                android:background="@drawable/button_config"
+                android:text="Profile"
+                android:textColor="@drawable/button_text_color"
+                android:textSize="30sp" />
+
+            <Button
+                android:id="@+id/buttonManagement"
+                android:layout_width="200dp"
+                android:layout_height="80dp"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginTop="160dp"
+                android:background="@drawable/button_config"
+                android:text="Management"
+                android:textColor="@drawable/button_text_color"
+                android:textSize="30sp" />
 
         </RelativeLayout>
 
