--- a/EverywhereHouseController/res/layout/log_in_view.xml
+++ b/EverywhereHouseController/res/layout/log_in_view.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@android:color/white"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:background="@color/White"
     android:gravity="top"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -11,36 +11,6 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:screenSize="normal"
     tools:context=".LogIn" >
-
-    <Button
-        android:id="@+id/buttonLogin"
-        android:layout_width="100dp"
-        android:layout_height="50dp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="49dp"
-        android:textColor="@drawable/button_text_color"
-        android:background="@drawable/button_config"
-        android:hint="60sp"
-        android:onClick="onClickButton"
-        android:text="Login"
-        android:textSize="20sp" />
-
-    <EditText
-        android:id="@+id/passwordText"
-        android:layout_width="wrap_content"
-        android:layout_height="30dp"
-        android:layout_above="@+id/buttonLogin"
-        android:layout_alignLeft="@+id/buttonLogin"
-        android:layout_alignRight="@+id/HouseIconManagementMenu"
-        android:layout_marginBottom="31dp"
-        android:background="@color/LightGrey"
-        android:ems="10"
-        android:inputType="textPassword"
-        android:textColor="@color/Black"
-        android:lines="1"
-        android:password="true"
-        android:singleLine="true" />
 
     <TextView
         android:id="@+id/password"
@@ -52,37 +22,13 @@
         android:textColor="@color/Black"
         android:textSize="20sp" />
 
-    <TextView
-        android:id="@+id/id"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/password"
-        android:layout_alignLeft="@+id/password"
-        android:layout_marginBottom="45dp"
-        android:text="User"
-        android:textColor="@color/Black"
-        android:textSize="20sp" />
-
-    <EditText
-        android:id="@+id/idText"
-        android:layout_width="wrap_content"
-        android:layout_height="30dp"
-        android:layout_alignRight="@+id/HouseIconManagementMenu"
-        android:layout_alignTop="@+id/id"
-        android:layout_toRightOf="@+id/password"
-        android:background="@color/LightGrey"
-        android:textColor="@color/Black"
-        android:ems="10"
-        android:lines="1"
-        android:singleLine="true" />
-
     <ImageView
         android:id="@+id/HouseIconManagementMenu"
         android:layout_width="200dp"
         android:layout_height="120dp"
+        android:layout_alignLeft="@+id/imageWordEHC"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="51dp"
+        android:layout_marginTop="25dp"
         android:src="@drawable/world_ehc" />
 
     <ImageView
@@ -94,14 +40,70 @@
         android:src="@drawable/word_ehc" />
 
     <TextView
+        android:id="@+id/id"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/password"
+        android:layout_centerVertical="true"
+        android:text="User"
+        android:textColor="@color/Black"
+        android:textSize="20sp" />
+
+    <EditText
+        android:id="@+id/idText"
+        android:layout_width="wrap_content"
+        android:layout_height="30dp"
+        android:layout_alignBottom="@+id/id"
+        android:layout_alignLeft="@+id/passwordText"
+        android:layout_alignRight="@+id/passwordText"
+        android:background="@color/LightGrey"
+        android:ems="10"
+        android:lines="1"
+        android:singleLine="true"
+        android:textColor="@color/Black" />
+
+    <EditText
+        android:id="@+id/passwordText"
+        android:layout_width="wrap_content"
+        android:layout_height="30dp"
+        android:layout_alignLeft="@+id/buttonLogin"
+        android:layout_alignRight="@+id/HouseIconManagementMenu"
+        android:layout_below="@+id/idText"
+        android:layout_marginTop="44dp"
+        android:background="@color/LightGrey"
+        android:ems="10"
+        android:inputType="textPassword"
+        android:lines="1"
+        android:password="true"
+        android:singleLine="true"
+        android:textColor="@color/Black" >
+
+        <requestFocus android:layout_width="wrap_content" />
+
+    </EditText>
+
+    <TextView
         android:id="@+id/createUser"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="26dp"
+        android:layout_marginBottom="16dp"
         android:text="Create user"
         android:textColor="@color/Blue"
         android:textColorHint="@color/Blue" />
+
+    <Button
+        android:id="@+id/buttonLogin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/createUser"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="39dp"
+        android:background="@drawable/button_config"
+        android:onClick="onClickButton"
+        android:text="Login"
+        android:textColor="@drawable/button_text_color"
+        android:textSize="25sp" />
 
 </RelativeLayout>
