--- a/EverywhereHouseController/res/layout/main_menu_view.xml
+++ b/EverywhereHouseController/res/layout/main_menu_view.xml
@@ -25,17 +25,20 @@
 
             <ImageView
                 android:id="@+id/world_loading_view"
-                android:layout_width="match_parent"
-                android:layout_height="150dp"
-                android:layout_marginTop="30dp"
+                android:layout_width="200dp"
+                android:layout_height="120dp"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="25dp"
                 android:src="@drawable/world_ehc" />
 
             <ImageView
                 android:id="@+id/word_ehc"
-                android:layout_width="match_parent"
-                android:layout_height="150dp"
+                android:layout_width="200dp"
+                android:layout_height="120dp"
+                android:layout_centerHorizontal="true"
                 android:layout_marginTop="30dp"
                 android:src="@drawable/word_ehc" />
+
         </RelativeLayout>
 
         <RelativeLayout
@@ -43,50 +46,52 @@
             android:layout_height="match_parent" >
 
             <Button
-                android:id="@+id/buttonConfig"
-                android:layout_width="130dp"
-                android:layout_height="80dp"
-                android:layout_alignParentLeft="true"
-                android:layout_below="@+id/buttonManagement"
-                android:layout_marginLeft="26dp"
-                android:layout_marginTop="17dp"
+                android:id="@+id/buttonProfile"
+                android:layout_width="wrap_content"
+                android:layout_height="70dp"
+                android:layout_alignLeft="@+id/buttonWorks"
+                android:layout_alignParentRight="true"
+                android:layout_alignTop="@+id/buttonConfig"
                 android:background="@drawable/button_config"
-                android:text="Configuration"
-                android:textColor="@drawable/button_text_color"
-                android:textSize="20sp" />
-
-            <Button
-                android:id="@+id/buttonManagement"
-                android:layout_width="130dp"
-                android:layout_height="80dp"
-                android:layout_alignLeft="@+id/buttonConfig"
-                android:layout_alignParentTop="true"
-                android:layout_marginTop="77dp"
-                android:background="@drawable/button_config"
-                android:text="Management"
+                android:text="Profile"
                 android:textColor="@drawable/button_text_color"
                 android:textSize="20sp" />
 
             <Button
                 android:id="@+id/buttonWorks"
-                android:layout_width="130dp"
-                android:layout_height="80dp"
-                android:layout_above="@+id/buttonConfig"
+                android:layout_width="wrap_content"
+                android:layout_height="70dp"
+                android:layout_alignBaseline="@+id/buttonManagement"
+                android:layout_alignBottom="@+id/buttonManagement"
                 android:layout_alignParentRight="true"
-                android:layout_marginRight="19dp"
+                android:layout_marginLeft="28dp"
+                android:layout_toRightOf="@+id/buttonManagement"
                 android:background="@drawable/button_config"
                 android:text="Tasks"
                 android:textColor="@drawable/button_text_color"
                 android:textSize="20sp" />
 
             <Button
-                android:id="@+id/buttonProfile"
-                android:layout_width="130dp"
-                android:layout_height="80dp"
-                android:layout_alignLeft="@+id/buttonWorks"
-                android:layout_alignTop="@+id/buttonConfig"
+                android:id="@+id/buttonManagement"
+                android:layout_width="wrap_content"
+                android:layout_height="70dp"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginTop="72dp"
                 android:background="@drawable/button_config"
-                android:text="Profile"
+                android:text="Management"
+                android:textColor="@drawable/button_text_color"
+                android:textSize="20sp" />
+
+            <Button
+                android:id="@+id/buttonConfig"
+                android:layout_width="wrap_content"
+                android:layout_height="70dp"
+                android:layout_alignParentLeft="true"
+                android:layout_below="@+id/buttonManagement"
+                android:layout_marginTop="18dp"
+                android:background="@drawable/button_config"
+                android:text="Configuration"
                 android:textColor="@drawable/button_text_color"
                 android:textSize="20sp" />
 
