--- a/EverywhereHouseController/res/layout/remote_control_view.xml
+++ b/EverywhereHouseController/res/layout/remote_control_view.xml
@@ -97,23 +97,7 @@
         android:src="@drawable/play_remote" />
 
     <ImageView
-        android:id="@+id/config_remote"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_below="@+id/seven_remote"
-        android:layout_toLeftOf="@+id/seven_remote"
-        android:src="@drawable/config_remote" />
-
-    <ImageView
-        android:id="@+id/star_remote"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_alignLeft="@+id/on_off_remote"
-        android:layout_alignTop="@+id/zero_remote"
-        android:src="@drawable/star_remote" />
-
-    <ImageView
-        android:id="@+id/dowm_arrow_remote"
+        android:id="@+id/down_arrow_remote"
         android:layout_width="70dp"
         android:layout_height="70dp"
         android:layout_alignLeft="@+id/up_arrow_remote"
@@ -122,24 +106,15 @@
         android:src="@drawable/down_arrow_remote" />
 
     <ImageView
-        android:id="@+id/up_arrow_remote"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:layout_alignTop="@+id/word_ehc"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="28dp"
-        android:src="@drawable/up_arrow_remote" />
-
-    <ImageView
         android:id="@+id/left_arrow_remote"
         android:layout_width="wrap_content"
         android:layout_height="70dp"
-        android:layout_alignTop="@+id/rigth_arrow_remote"
-        android:layout_toLeftOf="@+id/rigth_arrow_remote"
+        android:layout_alignTop="@+id/right_arrow_remote"
+        android:layout_toLeftOf="@+id/right_arrow_remote"
         android:src="@drawable/left_arrow_remote" />
 
     <ImageView
-        android:id="@+id/rigth_arrow_remote"
+        android:id="@+id/right_arrow_remote"
         android:layout_width="70dp"
         android:layout_height="70dp"
         android:layout_alignRight="@+id/three_remote"
@@ -152,7 +127,7 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_alignLeft="@+id/four_remote"
-        android:layout_below="@+id/dowm_arrow_remote"
+        android:layout_below="@+id/down_arrow_remote"
         android:src="@drawable/one_remote" />
 
     <ImageView
@@ -162,5 +137,30 @@
         android:layout_alignLeft="@+id/four_remote"
         android:layout_below="@+id/four_remote"
         android:src="@drawable/seven_remote" />
+
+    <ImageView
+        android:id="@+id/up_arrow_remote"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_alignBottom="@+id/play_remote"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="25dp"
+        android:src="@drawable/up_arrow_remote" />
+
+    <ImageView
+        android:id="@+id/config_remote"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_alignLeft="@+id/seven_remote"
+        android:layout_alignTop="@+id/zero_remote"
+        android:src="@drawable/config_remote" />
+
+    <ImageView
+        android:id="@+id/star_remote"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_alignLeft="@+id/nine_remote"
+        android:layout_alignTop="@+id/zero_remote"
+        android:src="@drawable/star_remote" />
 
 </RelativeLayout>
