[MODIFIED] Create user is a activity. [ADDED] Applied style guide.

--- a/EverywhereHouseController/res/layout-large/management_menu_view.xml
+++ b/EverywhereHouseController/res/layout-large/management_menu_view.xml
@@ -12,8 +12,8 @@
     tools:context=".ManagementMenu" >
     	    	
         <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:orientation="vertical" >
 
             <RelativeLayout
@@ -31,13 +31,14 @@
             <RelativeLayout
                 android:id="@+id/RelativeContentTables"
                 android:layout_width="match_parent"
-                android:layout_height="552dp" >
+                android:layout_height="match_parent" >
 
                 <TableLayout
                     android:id="@+id/table2"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentBottom="false"
+                    android:layout_alignParentLeft="false"
                     android:layout_alignParentRight="true"
                     android:layout_alignParentTop="true"
                     android:layout_marginRight="60dp"
@@ -49,7 +50,9 @@
                     android:id="@+id/table1"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentBottom="false"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentRight="false"
                     android:layout_alignParentTop="true"
                     android:layout_marginLeft="60dp"
                     android:layout_marginTop="30dp"
