--- a/EverywhereHouseController/res/layout-small/log_in_view.xml
+++ b/EverywhereHouseController/res/layout-small/log_in_view.xml
@@ -4,13 +4,68 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="@color/White"
-    android:gravity="top"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:screenSize="normal"
     tools:context=".LogIn" >
+	
+    <ImageView
+        android:id="@+id/HouseIconManagementMenu"
+        android:layout_width="100dp"
+        android:layout_height="90dp"
+        android:layout_alignParentTop="false"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="40dp"
+        android:src="@drawable/world_ehc" />
+
+     <ImageView
+         android:id="@+id/imageWordEHC"
+         android:layout_width="100dp"
+         android:layout_height="90dp"
+         android:layout_alignBottom="@+id/HouseIconManagementMenu"
+         android:layout_alignTop="@+id/HouseIconManagementMenu"
+         android:layout_centerHorizontal="true"
+         android:layout_marginTop="5dp"
+         android:src="@drawable/word_ehc" />
+    
+    <TextView
+        android:id="@+id/createUser"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="32dp"
+        android:text="Create user"
+        android:textColor="@color/Blue"
+        android:textColorHint="@color/Blue" />
+
+    <EditText
+        android:id="@+id/idText"
+        android:layout_width="120dp"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/passwordText"
+        android:layout_centerVertical="true"
+        android:background="@color/LightGrey"
+        android:ems="10"
+        android:lines="1"
+        android:singleLine="true"
+        android:textColor="@color/Black" >
+
+        <requestFocus />
+    </EditText>
+
+    <EditText
+        android:id="@+id/passwordText"
+        android:layout_width="120dp"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/createUser"
+        android:layout_below="@+id/id"
+        android:layout_marginLeft="33dp"
+        android:layout_marginTop="33dp"
+        android:background="@color/LightGrey"
+        android:ems="10"
+        android:inputType="textPassword"
+        android:lines="1"
+        android:password="true"
+        android:singleLine="true"
+        android:textColor="@color/Black" />
 
     <TextView
         android:id="@+id/password"
@@ -23,85 +78,26 @@
         android:textSize="20sp" />
 
     <TextView
-        android:id="@+id/createUser"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:text="Create user"
-        android:textColor="@color/Blue"
-        android:textColorHint="@color/Blue" />
-
-    <ImageView
-        android:id="@+id/HouseIconManagementMenu"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/imageWordEHC"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="25dp"
-        android:src="@drawable/world_ehc" />
-
-    <ImageView
-        android:id="@+id/imageWordEHC"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/HouseIconManagementMenu"
-        android:layout_centerHorizontal="true"
-        android:src="@drawable/word_ehc" />
-
-    <TextView
         android:id="@+id/id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/password"
-        android:layout_centerVertical="true"
+        android:layout_alignTop="@+id/idText"
         android:text="User"
         android:textColor="@color/Black"
         android:textSize="20sp" />
-
-    <EditText
-        android:id="@+id/idText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/id"
-        android:layout_alignLeft="@+id/passwordText"
-        android:layout_alignRight="@+id/passwordText"
-        android:background="@color/LightGrey"
-        android:ems="10"
-        android:lines="1"
-        android:singleLine="true"
-        android:textColor="@color/Black" />
-
-    <EditText
-        android:id="@+id/passwordText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/buttonLogin"
-        android:layout_alignRight="@+id/HouseIconManagementMenu"
-        android:layout_below="@+id/idText"
-        android:layout_marginTop="44dp"
-        android:background="@color/LightGrey"
-        android:ems="10"
-        android:inputType="textPassword"
-        android:lines="1"
-        android:password="true"
-        android:singleLine="true"
-        android:textColor="@color/Black" >
-
-        <requestFocus />
-    </EditText>
 
     <Button
         android:id="@+id/buttonLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_above="@+id/createUser"
         android:layout_alignLeft="@+id/createUser"
-        android:layout_below="@+id/passwordText"
-        android:layout_marginTop="42dp"
+        android:layout_marginBottom="20dp"
         android:background="@drawable/button_config"
         android:onClick="onClickButton"
         android:text="Login"
         android:textColor="@drawable/button_text_color"
-        android:textSize="25sp" />
+        android:textSize="20sp" />
 
 </RelativeLayout>
