--- a/EverywhereHouseController/res/layout-xlarge/log_in_view.xml
+++ b/EverywhereHouseController/res/layout-xlarge/log_in_view.xml
@@ -15,35 +15,12 @@
 
      <ImageView
          android:id="@+id/HouseIconManagementMenu"
-         android:layout_width="fill_parent"
-         android:layout_height="400dp"
+         android:layout_width="match_parent"
+         android:layout_height="200dp"
          android:layout_alignParentTop="true"
          android:layout_centerHorizontal="true"
          android:layout_marginTop="48dp"
          android:src="@drawable/world_ehc" />
-
-     <Button
-         android:id="@+id/buttonLogin"
-         android:layout_width="200dp"
-         android:layout_height="80dp"
-         android:layout_alignParentBottom="true"
-         android:layout_centerHorizontal="true"
-         android:layout_marginBottom="77dp"
-         android:onClick="onClickButton" 
-         android:textColor="@drawable/button_text_color"
-         android:background="@drawable/button_config"
-         android:text="Login"
-         android:textSize="50sp" />
-
-     <EditText
-         android:id="@+id/passwordText"
-         android:layout_width="400dp"
-         android:layout_height="wrap_content"
-         android:layout_alignBottom="@+id/password"
-         android:layout_alignLeft="@+id/buttonLogin"
-         android:ems="10"
-         android:inputType="textPassword"
-         android:lines="1" />
 
      <ImageView
          android:id="@+id/imageWordEHC"
@@ -54,24 +31,15 @@
          android:layout_centerHorizontal="true"
          android:src="@drawable/word_ehc" />
 
-     <EditText
-         android:id="@+id/idText"
-         android:layout_width="400dp"
-         android:layout_height="wrap_content"
-         android:layout_alignLeft="@+id/passwordText"
-         android:layout_below="@+id/HouseIconManagementMenu"
-         android:layout_marginTop="144dp"
-         android:ems="10"
-         android:lines="1" />
-
      <TextView
          android:id="@+id/id"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignBottom="@+id/idText"
          android:layout_alignLeft="@+id/HouseIconManagementMenu"
-         android:layout_marginLeft="28dp"
+         android:layout_marginLeft="40dp"
          android:text="User"
+         android:textColor="@color/Black"
          android:textSize="50sp" />
 
      <TextView
@@ -82,6 +50,56 @@
          android:layout_below="@+id/id"
          android:layout_marginTop="125dp"
          android:text="Password "
+         android:textColor="@color/Black"
          android:textSize="50sp" />
+
+     <EditText
+         android:id="@+id/idText"
+         android:layout_width="400dp"
+         android:layout_height="70dp"
+         android:layout_alignRight="@+id/HouseIconManagementMenu"
+         android:layout_below="@+id/HouseIconManagementMenu"
+         android:layout_marginRight="40dp"
+         android:layout_marginTop="146dp"
+         android:ems="10"
+         android:lines="1" >
+
+         <requestFocus />
+     </EditText>
+
+     <EditText
+         android:id="@+id/passwordText"
+         android:layout_width="400dp"
+         android:layout_height="70dp"
+         android:layout_alignBottom="@+id/password"
+         android:layout_alignLeft="@+id/idText"
+         android:ems="10"
+         android:inputType="textPassword"
+         android:lines="1" />
+
+     <Button
+         android:id="@+id/buttonLogin"
+         android:layout_width="300dp"
+         android:layout_height="100dp"
+         android:layout_below="@+id/passwordText"
+         android:layout_centerHorizontal="true"
+         android:layout_marginTop="173dp"
+         android:background="@drawable/button_config"
+         android:onClick="onClickButton"
+         android:text="Login"
+         android:textColor="@drawable/button_text_color"
+         android:textSize="50sp" />
+
+     <TextView
+         android:id="@+id/createUser"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:layout_below="@+id/buttonLogin"
+         android:layout_centerHorizontal="true"
+         android:layout_marginTop="120dp"
+         android:text="Create user"
+         android:textColor="@color/Blue"
+         android:textColorHint="@color/Blue"
+         android:textSize="40sp" />
 
 </RelativeLayout>
