--- a/EverywhereHouseController/res/layout/create_user.xml
+++ b/EverywhereHouseController/res/layout/create_user.xml
@@ -65,40 +65,6 @@
         android:textSize="20sp" />
 
     <TextView
-        android:id="@+id/textMessage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/newEmail"
-        android:layout_alignLeft="@+id/textView2"
-        android:layout_marginBottom="35dp"
-        android:text="User"
-        android:textSize="20sp" />
-
-    <EditText
-        android:id="@+id/newUser"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/textMessage"
-        android:layout_alignBottom="@+id/textMessage"
-        android:layout_alignRight="@+id/newEmail"
-        android:layout_toRightOf="@+id/newUserConfirm"
-        android:ems="10"
-        android:singleLine="true" />
-
-    <Button
-        android:id="@+id/newUserConfirm"
-        android:layout_width="100dp"
-        android:layout_height="40dp"
-        android:layout_alignLeft="@+id/textView4"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="70dp"
-        android:layout_marginLeft="17dp"
-        android:background="@drawable/button_config"
-        android:text="Confirm"
-        android:textColor="@drawable/button_text_color"
-        android:textSize="20sp" />
-
-    <TextView
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -112,13 +78,48 @@
         android:id="@+id/newRepeatPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/textView4"
         android:layout_alignLeft="@+id/newPassword"
-        android:layout_alignRight="@+id/newUserCancel"
-        android:layout_alignTop="@+id/textView4"
+        android:layout_alignRight="@+id/newPassword"
         android:ems="10"
         android:inputType="textPassword"
         android:password="true"
-        android:singleLine="true" />
+        android:singleLine="true" >
+    </EditText>
+
+    <EditText
+        android:id="@+id/newUser"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/textMessage"
+        android:layout_alignRight="@+id/newEmail"
+        android:layout_toRightOf="@+id/newUserConfirm"
+        android:ems="10"
+        android:singleLine="true" >
+
+    </EditText>
+
+    <Button
+        android:id="@+id/newUserConfirm"
+        android:layout_width="100dp"
+        android:layout_height="40dp"
+        android:layout_alignLeft="@+id/textView4"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="69dp"
+        android:background="@drawable/button_config"
+        android:text="Confirm"
+        android:textColor="@drawable/button_text_color"
+        android:textSize="20sp" />
+
+    <TextView
+        android:id="@+id/textMessage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/newEmail"
+        android:layout_alignLeft="@+id/textView2"
+        android:layout_marginBottom="31dp"
+        android:text="User"
+        android:textSize="20sp" />
 
 </RelativeLayout>
 </ScrollView>
