--- a/EverywhereHouseController/res/layout/group_item.xml
+++ b/EverywhereHouseController/res/layout/group_item.xml
@@ -1,17 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/White"
     android:orientation="vertical" >
-    
-    <TextView 
-        android:id="@+id/groupname"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:typeface="monospace"
-        android:textSize="12pt"
-        android:paddingLeft="30dp"
-        android:textColor="#669900"
-        />
 
-</LinearLayout>
+    <TextView
+        android:id="@+id/groupname"
+        android:layout_width="fill_parent"
+        android:layout_height="60dp"
+        android:background="@drawable/button_config"
+        android:gravity="center_vertical|center_horizontal"
+        android:paddingLeft="30dp"
+        android:textColor="@drawable/button_text_color"
+        android:textSize="12pt"
+        android:typeface="monospace" />
+
+    <ImageView
+        android:id="@+id/imageItemList"
+        android:layout_width="40dp"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/groupname"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginBottom="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp" />
+
+</RelativeLayout>
