--- a/EverywhereHouseController/res/layout/items_view.xml
+++ b/EverywhereHouseController/res/layout/items_view.xml
@@ -3,11 +3,12 @@
     android:id="@+id/llid"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical" 
+    android:background="@color/White">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="150dp" >
+        android:layout_height="91dp" >
 
         <TextView
             android:id="@+id/textRoom"
@@ -16,6 +17,7 @@
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
             android:text="TextView"
+            android:textColor="@color/Black"
             android:textSize="30sp" />
 
     </RelativeLayout>
@@ -23,7 +25,8 @@
      <ExpandableListView
         android:id="@+id/itemlist"
         android:layout_width="match_parent"
-        android:layout_height="fill_parent" >
+        android:layout_height="fill_parent" 
+        android:groupIndicator="@null">
     </ExpandableListView>
 
     
