--- a/EverywhereHouseController/res/layout/pager_view.xml
+++ b/EverywhereHouseController/res/layout/pager_view.xml
@@ -1,13 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/mainPlacesMenu"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:id="@+id/mainPlacesMenu">
- 
+    android:orientation="vertical" >
+
+    <HorizontalScrollView
+        android:id="@+id/horizontalScrollView1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/White"
+        android:fillViewport="true" >
+
+        <LinearLayout
+            android:id="@+id/HorizontalListView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@color/White"
+            android:orientation="horizontal" >
+
+        </LinearLayout>
+    </HorizontalScrollView>
+
     <android.support.v4.view.ViewPager
         android:id="@+id/pager"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
- 
-</RelativeLayout>
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" >
+
+    </android.support.v4.view.ViewPager>
+
+</LinearLayout>
