--- a/EverywhereHouseController/res/layout/management_menu_view.xml
+++ b/EverywhereHouseController/res/layout/management_menu_view.xml
@@ -6,15 +6,11 @@
     android:background="@android:color/white"
     android:fillViewport="true"
     android:gravity="top|bottom|left|right|center"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".ManagementMenu" >
     	    	
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
             android:orientation="vertical" >
 
             <RelativeLayout
@@ -29,55 +25,11 @@
 
             </RelativeLayout>
 
-            <RelativeLayout
-                android:id="@+id/RelativeContentTables"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="30dp" >
-
-               <TableLayout
-                   android:id="@+id/table2"
-                   android:layout_width="wrap_content"
-                   android:layout_height="match_parent"
-                   android:layout_alignParentBottom="true"
-                   android:layout_alignParentRight="true"
-                   android:layout_alignParentTop="true"
-                   android:layout_marginRight="30dp" >
-
-                </TableLayout>
-
-                <TableLayout
-                    android:id="@+id/table1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_alignParentBottom="true"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentTop="true"
-                    android:layout_marginLeft="30dp"
-                    android:layout_weight="0.12" >
-
-                    <TableRow
-                        android:id="@+id/tableRow1"
-                        android:layout_width="110dp"
-                        android:layout_height="70dp"
-                        android:visibility="visible" >
-
-                        <Button
-                            android:id="@+id/genericButton"
-                            android:layout_width="100dp"
-                            android:layout_height="70dp"
-                            android:layout_marginBottom="10dp"
-                            android:background="@drawable/button_config"
-                            android:text="Habitación"
-                            android:textColor="@drawable/button_text_color"
-                            android:textSize="30sp" />
-
-                    </TableRow>
-                </TableLayout>
-
-                    
-
-            </RelativeLayout>
+            <ListView
+                android:id="@+id/roomsListView"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent" >
+            </ListView>
 
         </LinearLayout>
 
