--- a/EverywhereHouseController/res/layout/event_fragment.xml
+++ b/EverywhereHouseController/res/layout/event_fragment.xml
@@ -4,14 +4,11 @@
     android:layout_height="match_parent" >
     
 	<TextView
-            android:id="@+id/eventtext"
+            android:id="@+id/fragment_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            android:text="TextView"
-            android:textColor="@color/Aqua"
-            android:textSize="30sp" />
+            android:layout_centerVertical="true"/>
     
 
 </LinearLayout>
